gen/evmTestParser.py
# Generated from C:/Users/Asus/Desktop/Compiler/TA/GIT/evmTest.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class evmTestParser ( Parser ):

    grammarFileName = "evmTest.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "'='", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'++'", "'--'", "'+='", 
                     "'-='", "<INVALID>", "<INVALID>", "'^'", "'^^'", "'int'", 
                     "'float'", "'string'", "'void'", "'function'", "'return'", 
                     "'if'", "'elsif'", "'else'", "'while'", "'for'", "'switch'", 
                     "'case'", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ASSIGN", "SEMICOLON", "ADD", 
                      "SUB", "MUL", "DIV", "EQUAL", "NOT_EQUAL", "GREATER", 
                      "GREATER_EQUAL", "SMALLER", "SMALLER_EQUAL", "INC", 
                      "DEC", "ADD_ASSIGN", "SUB_ASSIGN", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "LCSIGN", "BCSIGN", "INT", "FLOAT", 
                      "STRING", "VOID", "FUNCTION", "RETURN", "IF", "ELSIF", 
                      "ELSE", "WHILE", "FOR", "SWITCH", "CASE", "AND", "OR", 
                      "ID", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_variable_declaration = 3
    RULE_variable_type = 4
    RULE_id = 5
    RULE_value = 6
    RULE_expression = 7
    RULE_term = 8
    RULE_factor = 9
    RULE_assignment = 10
    RULE_function_declaraion = 11
    RULE_function_type = 12
    RULE_params = 13
    RULE_variable_signature = 14
    RULE_function_body = 15
    RULE_return_statement = 16
    RULE_if_statement = 17
    RULE_condition = 18
    RULE_condition_and = 19
    RULE_condition_compare = 20
    RULE_operation = 21
    RULE_elsif_statement = 22
    RULE_else_statement = 23
    RULE_while_statement = 24
    RULE_for_statement = 25
    RULE_update = 26
    RULE_switch_statement = 27
    RULE_case_statement = 28

    ruleNames =  [ "program", "statements", "statement", "variable_declaration", 
                   "variable_type", "id", "value", "expression", "term", 
                   "factor", "assignment", "function_declaraion", "function_type", 
                   "params", "variable_signature", "function_body", "return_statement", 
                   "if_statement", "condition", "condition_and", "condition_compare", 
                   "operation", "elsif_statement", "else_statement", "while_statement", 
                   "for_statement", "update", "switch_statement", "case_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    ASSIGN=6
    SEMICOLON=7
    ADD=8
    SUB=9
    MUL=10
    DIV=11
    EQUAL=12
    NOT_EQUAL=13
    GREATER=14
    GREATER_EQUAL=15
    SMALLER=16
    SMALLER_EQUAL=17
    INC=18
    DEC=19
    ADD_ASSIGN=20
    SUB_ASSIGN=21
    LINE_COMMENT=22
    BLOCK_COMMENT=23
    LCSIGN=24
    BCSIGN=25
    INT=26
    FLOAT=27
    STRING=28
    VOID=29
    FUNCTION=30
    RETURN=31
    IF=32
    ELSIF=33
    ELSE=34
    WHILE=35
    FOR=36
    SWITCH=37
    CASE=38
    AND=39
    OR=40
    ID=41
    INT_LITERAL=42
    FLOAT_LITERAL=43
    STRING_LITERAL=44
    WS=45
    NEWLINE=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(evmTestParser.StatementsContext,0)


        def EOF(self):
            return self.getToken(evmTestParser.EOF, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = evmTestParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.statements()
            self.state = 59
            self.match(evmTestParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(evmTestParser.StatementContext)
            else:
                return self.getTypedRuleContext(evmTestParser.StatementContext,i)


        def getRuleIndex(self):
            return evmTestParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = evmTestParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.statement()
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2444843024384) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(evmTestParser.Variable_declarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(evmTestParser.AssignmentContext,0)


        def function_declaraion(self):
            return self.getTypedRuleContext(evmTestParser.Function_declaraionContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(evmTestParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(evmTestParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(evmTestParser.For_statementContext,0)


        def switch_statement(self):
            return self.getTypedRuleContext(evmTestParser.Switch_statementContext,0)


        def getRuleIndex(self):
            return evmTestParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = evmTestParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.variable_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.function_declaraion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.if_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.while_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.for_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.switch_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(evmTestParser.Variable_typeContext,0)


        def id_(self):
            return self.getTypedRuleContext(evmTestParser.IdContext,0)


        def ASSIGN(self):
            return self.getToken(evmTestParser.ASSIGN, 0)

        def SEMICOLON(self):
            return self.getToken(evmTestParser.SEMICOLON, 0)

        def value(self):
            return self.getTypedRuleContext(evmTestParser.ValueContext,0)


        def expression(self):
            return self.getTypedRuleContext(evmTestParser.ExpressionContext,0)


        def getRuleIndex(self):
            return evmTestParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = evmTestParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.variable_type()
            self.state = 76
            self.id_()
            self.state = 77
            self.match(evmTestParser.ASSIGN)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 78
                self.value()
                pass

            elif la_ == 2:
                self.state = 79
                self.expression(0)
                pass


            self.state = 82
            self.match(evmTestParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(evmTestParser.INT, 0)

        def FLOAT(self):
            return self.getToken(evmTestParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(evmTestParser.STRING, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_variable_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_type" ):
                listener.enterVariable_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_type" ):
                listener.exitVariable_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_type" ):
                return visitor.visitVariable_type(self)
            else:
                return visitor.visitChildren(self)




    def variable_type(self):

        localctx = evmTestParser.Variable_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(evmTestParser.ID, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)




    def id_(self):

        localctx = evmTestParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(evmTestParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(evmTestParser.INT_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(evmTestParser.FLOAT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(evmTestParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = evmTestParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30786325577728) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(evmTestParser.TermContext,0)


        def expression(self):
            return self.getTypedRuleContext(evmTestParser.ExpressionContext,0)


        def ADD(self):
            return self.getToken(evmTestParser.ADD, 0)

        def SUB(self):
            return self.getToken(evmTestParser.SUB, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = evmTestParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 99
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = evmTestParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 93
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 94
                        self.match(evmTestParser.ADD)
                        self.state = 95
                        self.term(0)
                        pass

                    elif la_ == 2:
                        localctx = evmTestParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 96
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 97
                        self.match(evmTestParser.SUB)
                        self.state = 98
                        self.term(0)
                        pass

             
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(evmTestParser.FactorContext,0)


        def term(self):
            return self.getTypedRuleContext(evmTestParser.TermContext,0)


        def MUL(self):
            return self.getToken(evmTestParser.MUL, 0)

        def DIV(self):
            return self.getToken(evmTestParser.DIV, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = evmTestParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 113
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = evmTestParser.TermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 107
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 108
                        self.match(evmTestParser.MUL)
                        self.state = 109
                        self.factor()
                        pass

                    elif la_ == 2:
                        localctx = evmTestParser.TermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 110
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 111
                        self.match(evmTestParser.DIV)
                        self.state = 112
                        self.factor()
                        pass

             
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(evmTestParser.SUB, 0)

        def factor(self):
            return self.getTypedRuleContext(evmTestParser.FactorContext,0)


        def id_(self):
            return self.getTypedRuleContext(evmTestParser.IdContext,0)


        def value(self):
            return self.getTypedRuleContext(evmTestParser.ValueContext,0)


        def expression(self):
            return self.getTypedRuleContext(evmTestParser.ExpressionContext,0)


        def getRuleIndex(self):
            return evmTestParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = evmTestParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(evmTestParser.SUB)
                self.state = 119
                self.factor()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.id_()
                pass
            elif token in [42, 43, 44]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.value()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.match(evmTestParser.T__0)
                self.state = 123
                self.expression(0)
                self.state = 124
                self.match(evmTestParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(evmTestParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(evmTestParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(evmTestParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(evmTestParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = evmTestParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(evmTestParser.ID)
            self.state = 129
            self.match(evmTestParser.ASSIGN)
            self.state = 130
            self.expression(0)
            self.state = 131
            self.match(evmTestParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declaraionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_type(self):
            return self.getTypedRuleContext(evmTestParser.Function_typeContext,0)


        def FUNCTION(self):
            return self.getToken(evmTestParser.FUNCTION, 0)

        def id_(self):
            return self.getTypedRuleContext(evmTestParser.IdContext,0)


        def function_body(self):
            return self.getTypedRuleContext(evmTestParser.Function_bodyContext,0)


        def params(self):
            return self.getTypedRuleContext(evmTestParser.ParamsContext,0)


        def getRuleIndex(self):
            return evmTestParser.RULE_function_declaraion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaraion" ):
                listener.enterFunction_declaraion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaraion" ):
                listener.exitFunction_declaraion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaraion" ):
                return visitor.visitFunction_declaraion(self)
            else:
                return visitor.visitChildren(self)




    def function_declaraion(self):

        localctx = evmTestParser.Function_declaraionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_declaraion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.function_type()
            self.state = 134
            self.match(evmTestParser.FUNCTION)
            self.state = 135
            self.id_()
            self.state = 136
            self.match(evmTestParser.T__0)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0):
                self.state = 137
                self.params()


            self.state = 140
            self.match(evmTestParser.T__1)
            self.state = 141
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(evmTestParser.VOID, 0)

        def INT(self):
            return self.getToken(evmTestParser.INT, 0)

        def FLOAT(self):
            return self.getToken(evmTestParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(evmTestParser.STRING, 0)

        def getRuleIndex(self):
            return evmTestParser.RULE_function_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_type" ):
                listener.enterFunction_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_type" ):
                listener.exitFunction_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_type" ):
                return visitor.visitFunction_type(self)
            else:
                return visitor.visitChildren(self)




    def function_type(self):
